# tradr-uav-ros-interface

bridge_path_interface_msgs/: CMakeLists.txt  bridge-path-interface_specification_v1.txt  bridge-path-interface_specification_v2.txt  bridge-path-interface_specification_v3.txt  bridge-path-interface_specification_v4.txt  bridge-path-interface_specification_v5.txt  package.xml  topic_names.txt
bridge_path_interface_msgs/autogen_srv/: getTask.srv  putTask.srv
bridge_path_interface_msgs/msg/: ActionStatus.msg  Camera.msg  CameraSettings.msg  CurrentWork.msg  FotoAction.msg  OrientationBoundaries.msg  PhotoSettingsCapabilities.msg  RegistrationNotification.msg  Status.msg  StreamSettingsCapabilities.msg  Task.msg  TaskAck.msg  TaskControl.msg  TaskFeedback.msg  TaskFin.msg  TaskReq.msg  TaskStatus.msg  UavBoundaries.msg  UavCapabilities.msg  UavIdent.msg  UavState.msg  Velocity.msg  VideoFormat.msg  Waypoint.msg  WaypointStatus.msg
bridge_path_interface_msgs/srv/: GetRegistrationList.srv  GetUavIdent.srv  GetUavState.srv
uav_videostream_msgs/: CMakeLists.txt  package.xml
uav_videostream_msgs/msg/: Pose.msg  VideostreamData.msg  VideostreamStartReq.msg  VideostreamStartRsp.msg  VideostreamStopReq.msg
