<?xml version="1.0"?>
<package>
  <name>bridge_path_interface_msgs</name>
  <version>1.0.0</version>
  <description>The bridge_path_interface_msgs package</description>

  <maintainer email="gerhard.senkowski@iais.fraunhofer.de">Gerhard Senkowski</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>common_db_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
