<?xml version="1.0"?>
<package>
  <name>uav_videostream_msgs</name>
  <version>1.0.0</version>
  <description>The uav_videostream_msgs package</description>

  <maintainer email="alexander.schmitz@iais.fraunhofer.de">Alexander Schmitz</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>common_db_msgs</build_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
